--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "TFJS e2e automation test",
   "dependencies": {
+    "clang-format": "^1.6.0",
     "nodemailer": "^6.4.6",
     "playwright": "^1.8.0",
     "systeminformation": "^4.26.4",
