--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "clang-format": "^1.6.0",
     "nodemailer": "^6.4.6",
-    "playwright": "^1.8.0",
+    "playwright": "1.11.0",
     "systeminformation": "^4.26.4",
     "yargs": "^16.2.0"
   }
