--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "TFJS e2e automation test",
   "dependencies": {
     "clang-format": "^1.6.0",
+    "dotenv": "^16.0.0",
     "nodemailer": "^6.4.6",
     "playwright": "1.17.1",
     "systeminformation": "^4.26.4",
