--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "webtest",
   "version": "1.0.0",
-  "description": "TFJS e2e automation test",
+  "description": "TFJS Automation Test",
   "dependencies": {
     "clang-format": "^1.6.0",
     "nodemailer": "^6.4.6",
-    "playwright": "1.17.1",
+    "playwright": "1.25.1",
     "systeminformation": "^4.26.4",
     "yargs": "^16.2.0"
-  }
+  },
+  "license": "MIT"
 }
