Switch to puppeteer from playwright
All the code can be easily ported from playwright to puppeteer except
for page.waitForEvent().

--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "webtest",
+  "name": "tfjstest",
   "version": "1.0.0",
   "description": "TFJS Automation Test",
   "dependencies": {
-    "clang-format": "^1.6.0",
-    "nodemailer": "^6.4.6",
-    "playwright": "1.25.1",
-    "systeminformation": "^4.26.4",
-    "yargs": "^16.2.0"
+    "clang-format": "1.6.0",
+    "nodemailer": "6.4.6",
+    "puppeteer": "19.7.5",
+    "systeminformation": "4.26.4",
+    "yargs": "16.2.0"
   },
   "license": "MIT"
 }
